--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,7 +97,6 @@ footer p {
 .boxes {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-
   padding: 10px;
   background-color: #686d76;
   text-align: center;
@@ -161,10 +160,18 @@ section.first {
   flex-direction: row;
   justify-content: space-between;
 } */
+.box {
+  margin-bottom: 30px;
+}
+
 .box img {
   width: 200px;
   height: 200px;
+  border-color: #373a40;
+  border-style: solid;
+  border-radius: 10%;
 }
+
 /* aca empieza media query movile 
 +
 +
