--- a/sass/_cajas.scss
+++ b/sass/_cajas.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@use "variables";
 
 .boxes {
   display: grid;
@@ -8,7 +8,7 @@
   text-align: center;
   transition: background-color 0.3s;
 }
-box {
+.box {
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
