agregado cart con spinner proximamente

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -90,6 +90,10 @@ section.first {
   font-size: 20px;
   text-align: center;
 }
+.icono {
+  width: 20px;
+  height: 18px;
+}
 
 @media (max-width: 768px) {
   #consulta {
